--- a/src/rm_nav/rm_localization/icp_registration/config/icp.yaml
+++ b/src/rm_nav/rm_localization/icp_registration/config/icp.yaml
@@ -7,7 +7,7 @@
     map_frame_id: "map"
     odom_frame_id: "odom"
     laser_frame_id: "livox_frame"
-    pointcloud_topic: "/livox/lidar/pointcloud"
+    pointcloud_topic: "/livox/lidar/pointcloud_filter"
     thresh: 0.1
     xy_offset: 0.2
     yaw_offset: 30.0
