--- a/src/rm_nav/rm_nav_bringup/config/simulation/segmentation_sim.yaml
+++ b/src/rm_nav/rm_nav_bringup/config/simulation/segmentation_sim.yaml
@@ -23,6 +23,6 @@ ground_segmentation:
     latch: false                # latch output topics or not
     visualize: false            # visualize segmentation result - USE ONLY FOR DEBUGGING
 
-    input_topic: "/livox/lidar/pointcloud"
+    input_topic: "/livox/lidar/pointcloud_filter"
     obstacle_output_topic: "segmentation/obstacle"
     ground_output_topic: "segmentation/ground"
