--- a/src/rm_nav/rm_navigation/rm_navigation/params/nav2_params.yaml
+++ b/src/rm_nav/rm_navigation/rm_navigation/params/nav2_params.yaml
@@ -214,7 +214,7 @@ local_costmap:
         min_obstacle_height: 0.00
         max_obstacle_height: 2.0 
         livox:
-          topic: /livox/lidar/pointcloud
+          topic: /livox/lidar/pointcloud_filter
           raytrace_min_range: 0.0
           raytrace_max_range: 50.0
           min_obstacle_height: 0.0
@@ -269,7 +269,7 @@ global_costmap:
         min_obstacle_height: 0.00
         max_obstacle_height: 2.0 
         livox:
-          topic: /livox/lidar/pointcloud
+          topic: /livox/lidar/pointcloud_filter
           raytrace_min_range: 0.0
           raytrace_max_range: 50.0
           min_obstacle_height: 0.0
