--- a/src/rm_nav/rm_localization/FAST_LIO/config/mid360.yaml
+++ b/src/rm_nav/rm_localization/FAST_LIO/config/mid360.yaml
@@ -7,7 +7,7 @@
         filter_size_map: 0.5
         cube_side_length: 1000.0
         runtime_pos_log_enable: false
-        map_file_path: "./src/rm_nav/rm_localization/FAST_LIO/PCD/test.pcd"
+        map_file_path: "/home/ares/ares/src/rm_nav/rm_nav_bringup/PCD/test.pcd"
 
         common:
             lid_topic:  "/livox/lidar"
@@ -45,6 +45,6 @@
             scan_bodyframe_pub_en: true  # true: output the point cloud scans in IMU-body-frame
 
         pcd_save:
-            pcd_save_en: false
+            pcd_save_en: true
             interval: -1                 # how many LiDAR frames saved in each pcd file; 
                                         # -1 : all frames will be saved in ONE pcd file, may lead to memory crash when having too much frames.
